Fix: Added footer alignment and title

--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,12 @@ img {
 .card-bg-color {
     background: #98C1D9;
 }
+
+.intro-state {
+    margin-top: 60px;
+    margin-bottom: 0;
+}
+
+.text-right {
+    text-align: right;
+}
